fix last commit (missing padding on region)

--- a/bootstrap_dashboard/css/main.css
+++ b/bootstrap_dashboard/css/main.css
@@ -7054,7 +7054,7 @@ footer.footer {
     padding-left: 15px;
   }
 }
-.page-wrapper .region {
+#page-wrapper .region {
   padding-top: 15px;
   padding-bottom: 15px;
 }
